--- a/index.html
+++ b/index.html
@@ -1,18 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>دردشة عشوائية</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Omegle Clone</title>
+  <style>
+    body{font-family: Arial, sans-serif;max-width:600px;margin:auto;padding:20px;text-align:center}
+    #chat{border:1px solid #ccc;height:300px;overflow:auto;margin:10px 0;padding:10px;text-align:left}
+    input{width:70%;padding:8px}
+    button{padding:8px 12px;margin:2px}
+    .me{font-weight:bold;color:blue}
+    .partner{color:green}
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>مرحبا بك في دردشة عشوائية</h1>
-    <div id="chat-box"></div>
-    <input type="text" id="message" placeholder="اكتب رسالتك...">
-    <button onclick="sendMessage()">إرسال</button>
-  </div>
-  <script src="script.js"></script>
+  <h2>دردشة عشوائية</h2>
+  <div id="status">غير متصل</div>
+  <div id="chat"></div>
+  <input id="input" type="text" placeholder="اكتب رسالة..." />
+  <button onclick="sendMsg()">إرسال</button>
+  <button onclick="find()">بدء دردشة</button>
+  <button onclick="leave()">إنهاء</button>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+    let currentRoom = null;
+
+    function append(msg, cls='') {
+      const d = document.createElement('div');
+      d.className = cls;
+      d.textContent = msg;
+      document.getElementById('chat').appendChild(d);
+      document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
+    }
+
+    socket.on("connect", () => {
+      document.getElementById('status').textContent = "متصل: " + socket.id;
+    });
+
+    socket.on("status", (t) => {
+      document.getElementById('status').textContent = t;
+    });
+
+    socket.on("paired", (data) => {
+      currentRoom = data.room;
+      document.getElementById('status').textContent = "تم العثور على شريك!";
+      append("تم الاتصال بشريك.", "system");
+    });
+
+    socket.on("message", (data) => {
+      append("شريك: " + data.text, "partner");
+    });
+
+    socket.on("partner_left", () => {
+      append("الشريك غادر المحادثة.", "system");
+      currentRoom = null;
+    });
+
+    function sendMsg() {
+      const text = document.getElementById('input').value.trim();
+      if (!text) return;
+      if (!currentRoom) { append("لا يوجد شريك!", "system"); return; }
+      socket.emit("message", { room: currentRoom, text });
+      append("أنا: " + text, "me");
+      document.getElementById('input').value = "";
+    }
+
+    function find() {
+      socket.emit("find_partner");
+      append("جاري البحث عن شريك...", "system");
+    }
+
+    function leave() {
+      if (currentRoom) socket.emit("leave", currentRoom);
+      currentRoom = null;
+      append("أنهيت الدردشة.", "system");
+    }
+  </script>
 </body>
 </html>
